@@ -62,7 +62,7 @@
     <Compile Include="Tests\ParseWithTypeConverter\ParseWithCustomTypeConverterTests.cs" />
     <Compile Include="Tests\TypeConverter\CustomTypeConvertTests.cs" />
     <Compile Include="Tests\TypeConverter\DateTimeConverterTests.cs" />
-    <Compile Include="Tests\LayoutDescriptor\PrimitiveTypesTest.cs" />
+    <Compile Include="Tests\TypeConverter\PrimitiveTypesTest.cs" />
     <Compile Include="Tests\LayoutDescriptor\LayoutDescriptorExpressionTests.cs" />
     <Compile Include="Infrastructure\FixedLayout\FixedFootballLayout.cs" />
     <Compile Include="Models\FootballScore.cs" />
