@@ -4,35 +4,59 @@ namespace FlatFileParserUnitTests.Models
 {
     public class PrimitiveTypesModel
     {
-        public int id { get; set; }
         public bool boolTest { get; set; }
-        public string stringTest { get; set; }
-        public double doubleTest { get; set; }
+        public byte byteTest { get; set; }
         public char charTest { get; set; }
-
+        public decimal decimalTest { get; set; }
+        public double doubleTest { get; set; }
+        public float floatTest { get; set; }
+        public int id { get; set; }
+        public int intTest { get; set; }
+        public long longTest { get; set; }
+        public sbyte sbyteTest { get; set; }
+        public short shortTest { get; set; }
+        public string stringTest { get; set; }
+        public uint uintTest { get; set; }
+        public ulong ulongTest { get; set; }
+        public ushort ushortTest { get; set; }
 
         public override bool Equals(object obj)
         {
-            return obj is PrimitiveTypesModel types &&
-                   id == types.id &&
-                   boolTest == types.boolTest &&
-                   stringTest == types.stringTest &&
-                   doubleTest == types.doubleTest &&
-                   charTest == types.charTest;
+            var model = obj as PrimitiveTypesModel;
+            return model != null &&
+                   boolTest == model.boolTest &&
+                   byteTest == model.byteTest &&
+                   charTest == model.charTest &&
+                   decimalTest == model.decimalTest &&
+                   doubleTest == model.doubleTest &&
+                   floatTest == model.floatTest &&
+                   id == model.id &&
+                   longTest == model.longTest &&
+                   sbyteTest == model.sbyteTest &&
+                   shortTest == model.shortTest &&
+                   stringTest == model.stringTest &&
+                   uintTest == model.uintTest &&
+                   ulongTest == model.ulongTest &&
+                   ushortTest == model.ushortTest;
         }
-
-        // Numeric value used to insert and identify PrimitiveTypesModel object in a hash-based collection such as the Dictionary<TKey, TValue> class, 
-        // the Hashtable class, or a type derived from the DictionaryBase class. The GetHashCode method provides this hash code for algorithms 
-        // that need quick checks of object equality.
 
         public override int GetHashCode()
         {
-            var hashCode = -393617894;
-            hashCode = hashCode * -1521134295 + id.GetHashCode();
+            var hashCode = -422371933;
             hashCode = hashCode * -1521134295 + boolTest.GetHashCode();
-            hashCode = hashCode * -1521134295 + EqualityComparer<string>.Default.GetHashCode(stringTest);
-            hashCode = hashCode * -1521134295 + doubleTest.GetHashCode();
+            hashCode = hashCode * -1521134295 + byteTest.GetHashCode();
             hashCode = hashCode * -1521134295 + charTest.GetHashCode();
+            hashCode = hashCode * -1521134295 + decimalTest.GetHashCode();
+            hashCode = hashCode * -1521134295 + doubleTest.GetHashCode();
+            hashCode = hashCode * -1521134295 + floatTest.GetHashCode();
+            hashCode = hashCode * -1521134295 + id.GetHashCode();
+            hashCode = hashCode * -1521134295 + longTest.GetHashCode();
+            hashCode = hashCode * -1521134295 + sbyteTest.GetHashCode();
+            hashCode = hashCode * -1521134295 + shortTest.GetHashCode();
+            hashCode = hashCode * -1521134295 + EqualityComparer<string>.Default.GetHashCode(stringTest);
+            hashCode = hashCode * -1521134295 + uintTest.GetHashCode();
+            hashCode = hashCode * -1521134295 + ulongTest.GetHashCode();
+            hashCode = hashCode * -1521134295 + ushortTest.GetHashCode();
             return hashCode;
         }
     }
